@@ -24,6 +24,8 @@ Fixes:
  * Verified that Penn compiles using the clang compiler, and fix a few
    warnings it generated. [SW]
  * Better fix for the DBREFLIST issue fixed in p6. [SW]
+ * @pemit/list stopped reporting when it failed to match an object in p5.
+   Reported by Padraic. [MG]
 
 & 1.8.4p6
 Version 1.8.4 patchlevel 6                                 Jul 29,  2011
